<resources>
    <string name="app_name">瓶什么</string>
    <string name="read">阅读</string>
    <string name="discovery">发现</string>
    <string name="special_topic">专题</string>
    <string name="search">搜索</string>
    <string name="more">更多</string>
    <string name="time">5–20 13:00</string>
    <string name="has_collected_at">本文已被收藏在:</string>
    <string name="rationable_ask">我需要这个权限来打开相机或相册</string>
    <string name="failed_to_get_image">获取图片失败</string>
    <string name="bp_apply">申请BP服务</string>
    <string name="base_info">基本信息</string>
    <string name="service_protocal">申请即默认同意《BP资格申请协议》</string>
    <string name="commit_apply">提交申请</string>
    <string name="login_quick">立即登录</string>
    <string name="my_notification">我的通知</string>
    <string name="login_tips">尊享阅读,成为有身份的人</string>
    <string name="clear_cache">清除缓存</string>
    <string name="user_callback">用户反馈</string>
    <string name="about_us">关于我们</string>
    <string name="sign_up">退出登录</string>
    <string name="wechat_sigin_in">微信登录</string>
    <string name="entrepreneur">我是创业者</string>
    <string name="investor">我是投资者</string>
    <string name="interesting">感兴趣的行业或者专题</string>
    <string name="internet_consumption">电商消费</string>
    <string name="comment_hint">说点什么吧</string>
    <string name="cancel">取消</string>
    <string name="ensure">确定</string>
    <string name="write_comment">写评论</string>
    <string name="send">发送</string>
    <string name="add_comment">发布评论…</string>
    <string name="tips">发布优质内容，你会发现一群志同道合的朋友</string>
    <string name="friends_group">好友圈</string>
    <string name="drifting_bottle">漂流瓶</string>
    <string name="publish">发布</string>
    <string name="editor_hint">记录这一刻…</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_msg">我的消息</string>
    <string name="my_publish">我的发布</string>
    <string name="bottle_content_hint">关于投融资，你有什么想法或需求？来和 志同道合的伙伴们沟通一下吧！说不定会 发现新的商机。</string>
    <string name="string_editor_detail_default_font">0/300</string>
    <string name="bottle_base_length">/150</string>
    <string name="want_to_be_looked">希望看到的人</string>
    <string name="detail">详情</string>
    <string name="my_bottle">我的瓶子</string>
    <string name="recent_read">最近阅读</string>
    <string name="settings">设置</string>
    <string name="delete">删除</string>
    <string name="comment_msg">评论消息</string>
    <string name="bottle_msg">漂流瓶</string>
    <string name="system_msg">系统通知</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="logining">登录中…</string>
    <string name="search_hint">搜个关键词试试</string>
    <string name="hot_comments">热门评论</string>
    <string name="no_more_comments">没有更多留言了</string>
    <string name="wx_friends">微信好友</string>
    <string name="wx_pyq">朋友圈</string>
    <string name="ensure_delete">确定删除?</string>
    <string name="discovery_pyq_title">动态详情</string>
    <string name="publish_comment">发布评论</string>
    <string name="ensure_delete_reply">确定要删除回复吗?</string>
    <string name="ensure_delete_bottle">确定要删除瓶子吗?</string>
    <string name="not_sign_in">未登录</string>
    <string name="sign_tips">暂无简介</string>
    <string name="hot_search">热门搜索</string>
    <string name="personal_profile">个人资料</string>
    <string name="head_portrait">头像</string>
    <string name="has_bind">已绑定</string>
    <string name="wx">微信</string>
    <string name="sex">性别</string>
    <string name="nick_name">昵称</string>
    <string name="phone_number">手机号</string>
    <string name="has_no_bind">未绑定</string>
    <string name="male">男</string>
    <string name="simple_intro">企业行业概述</string>
    <string name="enterprise_Introduction">请简介的输入您的现有产业，商业模式或者盈利模式，我们会请专业投资复核专家团队进行评审</string>
    <string name="financing_expect">融资期望</string>
    <string name="your_except_money">你所期望的投资金额</string>
    <string name="sum_money_hint">0.00</string>
    <string name="your_afford_equity">对应你能让出的股权</string>
    <string name="commit">提交</string>
    <string name="equity_percent">0.00</string>
    <string name="bp_protocol">申请即默认同意《BP资格申请协议》</string>
    <string name="register_protocol">点击注册即表示您同意《用户协议》</string>
    <string name="camera">相机</string>
    <string name="gallery">相册</string>
    <string name="add_label">添加标签</string>
    <string name="_0_150">0/150</string>
    <string name="_0_300">0/300</string>
    <string name="comm_hdl_web_url_default">file:///android_asset/net_error.html</string>
    <string name="id">ID</string>
    <string name="location">地区</string>
    <string name="hangzhou">浙江 杭州</string>
    <string name="jianjie">简介</string>
    <string name="void_text"> </string>
    <string name="connection_failed">网络连接失败</string>
    <string name="no_collection">您还没有收藏</string>
    <string name="no_publish">还没有任何发布哦</string>
    <string name="no_comments_message">目前还没有收到评论</string>
    <string name="no_bottle_message">目前还没有瓶子哦，快去扔一个/捡一个瓶子吧！</string>
    <string name="no_notify">目前还没有通知</string>
    <string name="no_read_record">没有阅读记录</string>
    <string name="take_photo">拍摄</string>
    <string name="bp">商业计划书</string>
    <string name="fu_hua">孵化那些事</string>
    <string name="hu_lian_wang">互联网工具</string>
    <string name="tou_zi">投资金额</string>
    <string name="zheng_ce">国家政策</string>
    <string name="zi_xun">产业咨询</string>
    <string name="get_v_code">获取验证码</string>
    <string name="verification_code">验证码</string>
    <string name="save">保存</string>
    <string name="instant_open">立即开启</string>
    <string name="yidao">驿道</string>
    <string name="slogan">你的梦想才是我的梦想</string>
    <string name="user_protocol">查看瓶什么用户协议</string>
    <string name="no_data">没有相应文章</string>
    <string name="wx_public_number">yidaozhizhou</string>
    <string name="url">www.edaochina.com</string>
    <string name="last_comments">最新评论</string>
    <string name="tv_user_protocol">《用户协议》</string>
    <string name="bind_phone_hint">点击注册即表示您同意</string>
    <string name="key_word">搜个关键词试试</string>
    <string name="no_category_art">该类目还没有文章</string>
    <string name="activity_detail">活动详情</string>
    <string name="sign_in">登录</string>
    <string name="register">注册</string>
    <string name="protocol">用户协议</string>
    <string name="ensure_cancel_collection">确认取消收藏?</string>
</resources>
