<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_bottle_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_bottle_push"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/publish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_bottle_content"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_120dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/bottle_content_hint"
        android:inputType="textMultiLine"
        android:textSize="@dimen/sp_12"
        android:maxLength="300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bottle_cancel" />

    <TextView
        android:id="@+id/tv_content_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_editor_detail_default_font"
        app:layout_constraintBottom_toBottomOf="@+id/et_bottle_content"
        app:layout_constraintEnd_toEndOf="@+id/et_bottle_content" />

    <View
        android:id="@+id/line1"
        style="@style/divide_line"
        android:layout_marginTop="@dimen/size_8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_bottle_content" />

    <TextView
        android:id="@+id/tv_want"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_link_gray_24dp"
        android:drawablePadding="@dimen/size_8dp"
        android:drawableRight="@drawable/ic_add_circle_black_24dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/size_8dp"
        android:paddingRight="@dimen/size_8dp"
        android:text="@string/want_to_be_looked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1" />

    <View
        android:id="@+id/line2"
        style="@style/divide_line"
        android:layout_marginTop="@dimen/size_16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_want" />
</android.support.constraint.ConstraintLayout>