<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_rootview"
    android:layout_width="match_parent"
    android:theme="@style/SettingsTheme"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_info"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="?android:attr/colorPrimary"
        app:navigationIcon="@drawable/jiantou_black"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/personal_profile"
            android:textColor="#ff333333"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="158dp" />
    </android.support.v7.widget.Toolbar>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/rl_head"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/item_ripple_selector"
        android:clickable="true"
        android:focusable="true"
        android:paddingLeft="@dimen/size_16dp"
        android:paddingRight="@dimen/size_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_info">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/head_portrait"
            android:textColor="@color/FF333333"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/head_portrait"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="24dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/head_portrait"
            android:src="@drawable/read_more_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <com.yidao.platform.info.view.CustomTextView
        android:id="@+id/tv_id"
        style="@style/CustomViewStyle"
        android:layout_marginTop="10dp"
        app:arrowVisible="false"
        app:key="@string/id"
        app:keyColor="@color/FF333333"
        app:keySize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_head"
        app:value="11255647545"
        app:valueColor="@color/FF999999"
        app:valueSize="15sp" />

    <com.yidao.platform.info.view.CustomTextView
        android:id="@+id/tv_nike_name"
        style="@style/CustomViewStyle"
        android:layout_marginTop="1dp"
        app:key="@string/nick_name"
        app:keyColor="@color/FF333333"
        app:keySize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_id"
        app:value="@string/nick_name"
        app:valueColor="@color/FF999999"
        app:valueSize="15sp" />

    <com.yidao.platform.info.view.CustomTextView
        android:id="@+id/tv_location"
        style="@style/CustomViewStyle"
        android:layout_marginTop="10dp"
        app:arrowVisible="false"
        app:key="@string/location"
        app:keyColor="@color/FF333333"
        app:keySize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nike_name"
        app:value="@string/hangzhou"
        app:valueColor="@color/FF999999"
        app:valueSize="15sp" />

    <com.yidao.platform.info.view.CustomTextView
        android:id="@+id/tv_status"
        style="@style/CustomViewStyle"
        android:layout_marginTop="1dp"
        app:key="@string/jianjie"
        app:keyColor="@color/FF333333"
        app:keySize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_location"
        app:value="too young too simple"
        app:valueColor="@color/FF999999"
        app:valueSize="15sp" />
</android.support.constraint.ConstraintLayout>