<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_discovery_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/tips"
        android:textColor="#ff999999"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginTop="@dimen/size_5dp" />

    <TextView
        android:id="@+id/btn_take_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableTop="@drawable/dis_xiangji"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/take_photo"
        android:textColor="@color/FF333333"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_album"
        app:layout_constraintTop_toBottomOf="@+id/tv_discovery_tips" />

    <TextView
        android:id="@+id/btn_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/dis_xiangce"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/gallery"
        android:textColor="@color/FF333333"
        app:layout_constraintBottom_toBottomOf="@+id/btn_take_photo"
        app:layout_constraintLeft_toRightOf="@id/btn_take_photo"
        app:layout_constraintRight_toLeftOf="@+id/btn_bottle" />

    <TextView
        android:id="@+id/btn_bottle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableTop="@drawable/dis_piaoliuping"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/drifting_bottle"
        android:textColor="@color/FF333333"
        app:layout_constraintBottom_toBottomOf="@+id/btn_album"
        app:layout_constraintLeft_toRightOf="@id/btn_album"
        app:layout_constraintRight_toRightOf="parent" />
    <View
        android:id="@+id/line"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_5dp"
        android:background="@color/colorLine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_bottle" />
</android.support.constraint.ConstraintLayout>