<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.LoginActivity">

    <ImageView
        android:id="@+id/iv_login_banner"
        android:layout_width="0dp"
        android:layout_height="252dp"
        android:background="@color/FF007AFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        app:hintTextAppearance="@style/MyTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_login_banner">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:maxLines="1"
            android:textColorHint="#ffd9d9d9"
            android:theme="@style/MyEditText" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_v_code"
        android:layout_width="80dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_btn_blue_corner_3dp"
        android:gravity="center"
        android:text="@string/get_v_code"
        android:textColor="#ffffffff"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_input_layout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_input_layout2" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout2"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        app:hintTextAppearance="@style/MyTextInputLayout"
        app:layout_constraintEnd_toStartOf="@+id/btn_v_code"
        app:layout_constraintStart_toStartOf="@+id/text_input_layout1"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout1">

        <EditText
            android:id="@+id/et_v_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/verification_code"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:textColorHint="#ffd9d9d9"
            android:theme="@style/MyEditText" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_operation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_btn_blue_corner_3dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout2" />

    <TextView
        android:id="@+id/tv_register_protocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        android:layout_marginBottom="30dp"
        android:text="@string/bind_phone_hint"
        android:textColor="#ff999999"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/tv_user_protocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_user_protocol"
        android:textColor="#007AFF"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_register_protocol"
        app:layout_constraintStart_toEndOf="@+id/tv_register_protocol"
        app:layout_constraintTop_toTopOf="@+id/tv_register_protocol" />

</android.support.constraint.ConstraintLayout>