<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_camera"
        style="@style/Style_CAMERA_SELECTOR"
        android:background="@drawable/shape_btm_top_half_corner"
        android:text="@string/camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line1"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_1dp"
        android:background="#ffdadade"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_camera" />

    <TextView
        android:id="@+id/tv_gallery"
        style="@style/Style_CAMERA_SELECTOR"
        android:background="@drawable/shape_btm_bottom_half_corner"
        android:text="@string/gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1" />

    <View
        android:id="@+id/line2"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_1dp"
        android:background="#ffdadade"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gallery" />
    <TextView
        android:id="@+id/tv_cancel"
        style="@style/Style_CAMERA_SELECTOR"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line2" />

</android.support.constraint.ConstraintLayout>